fix: update validation unique column in table
