# router/router.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	"gin-boilerplate/controller"
+	"gin-boilerplate/exception"
 	"gin-boilerplate/middleware"
 	"gin-boilerplate/repository"
 	"net/http"
@@ -12,13 +13,14 @@ import (
 )
 
 func NewRouter(
-	userRepository repository.UsersRepository, 
-	authenticationController *controller.AuthenticationController, 
-	usersController *controller.UserController, 
-	tagsController *controller.TagsController,
-	 ) *gin.Engine {
+	userRepository repository.UserRepository,
+	authController *controller.AuthController,
+	userController *controller.UserController,
+	tagController *controller.TagController,
+) *gin.Engine {
 	service := gin.Default()
 
+	service.Use(gin.CustomRecovery(exception.ErrorHandlers))
 	//add swagger docs
 	service.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
@@ -31,29 +33,30 @@ func NewRouter(
 	})
 
 	router := service.Group("/api")
-	authenticationRouter := router.Group("/auth")
-	authenticationRouter.POST("/register", authenticationController.Register)
-	authenticationRouter.POST("/login", authenticationController.Login)
-	authenticationRouter.POST("/forgot-password", authenticationController.ForgotPassword)
-	authenticationRouter.POST("/check-otp", authenticationController.CheckOtp)
-	authenticationRouter.PATCH("/reset-password", authenticationController.ResetPassword)
-	authenticationRouter.POST("/logout", middleware.JwtMiddleware(userRepository), authenticationController.Logout)
+	authRouter := router.Group("/auth")
+	authRouter.POST("/register", authController.Register)
+	authRouter.POST("/login", authController.Login)
+	authRouter.POST("/forgot-password", authController.ForgotPassword)
+	authRouter.POST("/check-otp", authController.CheckOtp)
+	authRouter.PATCH("/reset-password", authController.ResetPassword)
+	authRouter.POST("/logout", middleware.JwtMiddleware(userRepository), authController.Logout)
+	authRouter.GET("/refresh-token", middleware.JwtMiddleware(userRepository), authController.RefreshToken)
 
-	usersRouter := router.Group("/users")
-	usersRouter.GET("", middleware.JwtMiddleware(userRepository), usersController.GetUsers)
-	usersRouter.POST("", middleware.JwtMiddleware(userRepository), usersController.Create)
-	usersRouter.PATCH("/:userId", middleware.JwtMiddleware(userRepository), usersController.Update)
-	usersRouter.GET("/:userId", middleware.JwtMiddleware(userRepository), usersController.FindById)
-	usersRouter.POST("/bulk", middleware.JwtMiddleware(userRepository), usersController.BulkDelete)
-	usersRouter.GET("/export", middleware.JwtMiddleware(userRepository), usersController.Export)
-	usersRouter.POST("/import", middleware.JwtMiddleware(userRepository), usersController.Import)
+	userRouter := router.Group("/users")
+	userRouter.GET("", middleware.JwtMiddleware(userRepository), userController.GetUsers)
+	userRouter.POST("", middleware.JwtMiddleware(userRepository), userController.Create)
+	userRouter.PATCH("/:userId", middleware.JwtMiddleware(userRepository), userController.Update)
+	userRouter.GET("/:userId", middleware.JwtMiddleware(userRepository), userController.FindById)
+	userRouter.POST("/bulk", middleware.JwtMiddleware(userRepository), userController.BulkDelete)
+	userRouter.GET("/export", middleware.JwtMiddleware(userRepository), userController.Export)
+	userRouter.POST("/import", middleware.JwtMiddleware(userRepository), userController.Import)
 
-	tagsRouter := router.Group("/tags")
-	tagsRouter.GET("", middleware.JwtMiddleware(userRepository), tagsController.FindAll)
-	tagsRouter.GET("/:tagId", middleware.JwtMiddleware(userRepository), tagsController.FindById)
-	tagsRouter.POST("", middleware.JwtMiddleware(userRepository), tagsController.Create)
-	tagsRouter.PATCH("/:tagId", middleware.JwtMiddleware(userRepository), tagsController.Update)
-	tagsRouter.DELETE("/:tagId", middleware.JwtMiddleware(userRepository), tagsController.Delete)
+	tagRouter := router.Group("/tags")
+	tagRouter.GET("", middleware.JwtMiddleware(userRepository), tagController.FindAll)
+	tagRouter.GET("/:tagId", middleware.JwtMiddleware(userRepository), tagController.FindById)
+	tagRouter.POST("", middleware.JwtMiddleware(userRepository), tagController.Create)
+	tagRouter.PATCH("/:tagId", middleware.JwtMiddleware(userRepository), tagController.Update)
+	tagRouter.DELETE("/:tagId", middleware.JwtMiddleware(userRepository), tagController.Delete)
 
 	return service
 }
